- Hopefully slightly clearer handling of buddy add requests.
- set buddy_sendbuffer_delay now also supports milisecond precision.
- Renamed #bitlbee to &bitlbee to avoid confusion with the channel on OFTC.
- Reviewed the xinetd file and installation instructions.
- HTML stripping is configurable again.
- Quit messages (at least on crashes) should appear again.

Finished ...

Version 0.99:
- Fixed memory initialization bug in OSCAR module that caused crashes on
  closing the connection.
- Most likely fixed the bug that caused BitlBee to use 100% CPU time in
  some situations.
- Outgoing MSN typing notifications are now understood correctly by the
  orignal MS Mac/Windows clients (again).
- Added "account add $protocol" to the documentation, got rid of a lot
  of over-markup (i.e. overuse of bold-tags), reviewed some other parts.
- Small changes to help.xsl to fix small flaws in the help.txt formatting.
- Messaging yourself now doesn't make irssi or mIRC crash anymore.

Finished 3 Nov 2005

Version 0.93:
- &quot; is now correctly converted to " instead of '.
- Code cleanup in OSCAR module.
- Some changes for better RFC-compliancy.
- It's now possible to specify an alternate Jabber server.
- bitlbee_save() now also checks the return value of fclose(), which might
  solve more problems with lost account data.
- Fixed a file descriptor leak in bitlbee.c.
- Signedness fixes (mainly to keep GCC4 happy).
- Away messages are now sent correctly to most ICQ clients.
- BitlBee knows now which connection sends HTML, so it will strip HTML
  automatically, "set html strip" is no longer necessary. Also, outgoing HTML
  is escaped correctly.
- info-command works for AIM-connections too now.
- /notices to users will be sent as auto-away replies.
- Messages about a connection now also mention a handle, for people who have
  multiple accounts in use of the same protocol.
- Examples are back in help.txt.

Finished 31 Oct 2005

Version 0.92: